--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<div class="main-content"></div>
+<div class="main-content animate-container">
+    <h1 class="title animate-container">FEDERICO BARZOLA</h1>
+    <h3 class="subtitle animate-container">Desarrollador Web Front-end</h3>
+    <app-habilidades></app-habilidades>
+</div>
