--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,18 +3,17 @@
     margin: 0;
     padding: 20px;
     box-sizing: border-box;
-    background: url('https://i.ibb.co/2sn18GW/code.webp') no-repeat center center;
+    background: url('https://i.ibb.co/PF0qDGP/coding.webp') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
-    animation: slide-in-fwd-top 1.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; /* Nueva animación */
+    animation: slide-in-fwd-top 1.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; 
   }
   
   /* Contenido principal */
   .main-content {
-    height: 96vh;
+    height: 79.7vh;
     margin: 20px 0;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco con opacidad */
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
@@ -26,6 +25,136 @@
       opacity: 0;
     }
     100% {
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+    }
+  }
+  
+
+  .title {
+    font-size: 4rem; 
+    font-family: "Arial Black", sans-serif;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase; 
+    text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 
+                 0 0 60px rgba(255, 255, 255, 0.45), 
+                 0 0 110px rgba(255, 255, 255, 0.25), 
+                 0 0 100px rgba(255, 255, 255, 0.1); 
+    animation: text-flicker-in-glow 5s linear both; 
+    animation-delay: 2s;
+  }
+  
+  @keyframes text-flicker-in-glow {
+    0% {
+      opacity: 0;
+    }
+    10% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    10.1% {
+      opacity: 1;
+      text-shadow: none;
+    }
+    10.2% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    20% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    20.1% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
+    }
+    20.6% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    30% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    30.1% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+                   0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    30.5% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+                   0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    30.6% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    45% {
+      opacity: 0;
+      text-shadow: none;
+    }
+    45.1% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+                   0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    50% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+                   0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    100% {
+      opacity: 1;
+      text-shadow: 0 0 30px rgba(255, 255, 255, 0.6),
+                   0 0 60px rgba(255, 255, 255, 0.45),
+                   0 0 110px rgba(255, 255, 255, 0.25),
+                   0 0 100px rgba(255, 255, 255, 0.1);
+    }
+  }
+  
+
+  .subtitle {
+    font-size: 2rem;  /* Puedes ajustar el tamaño según tu diseño */
+    color: white;      /* Un color más oscuro para contraste */
+    font-weight: 600;  /* Más grosor para darle presencia */
+    -webkit-animation: tracking-in-contract-bck-bottom 1.5s cubic-bezier(.215, .61, .355, 1.000) both;
+    animation: tracking-in-contract-bck-bottom 1.5s cubic-bezier(.215, .61, .355, 1.000) both;
+    animation-delay: 5s;
+    text-transform: uppercase;  /* Hace que el texto sea en mayúsculas */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);  /* Agrega una sombra sutil para destacar */
+  }
+  
+  @-webkit-keyframes tracking-in-contract-bck-bottom {
+    0% {
+      letter-spacing: 1em;
+      -webkit-transform: translateZ(400px) translateY(300px);
+      transform: translateZ(400px) translateY(300px);
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      -webkit-transform: translateZ(0) translateY(0);
+      transform: translateZ(0) translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes tracking-in-contract-bck-bottom {
+    0% {
+      letter-spacing: 1em;
+      -webkit-transform: translateZ(400px) translateY(300px);
+      transform: translateZ(400px) translateY(300px);
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      -webkit-transform: translateZ(0) translateY(0);
       transform: translateZ(0) translateY(0);
       opacity: 1;
     }
