--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,12 +1,11 @@
-<div class="separator">
     <div class="habilidades-container">
         <!-- Tu contenido va aquí -->
-        <h2>Mis Habilidades</h2>
+        <h2>Domino...</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
             <li>Angular</li>
+            <li>typescript</li>
         </ul>
     </div>
-</div>
