--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <div class="background">
-    <div class="main-content animate-container">
-        <h1 class="title animate-container">FEDERICO BARZOLA</h1>
-        <h3 class="subtitle animate-container">Desarrollador Web Front-end</h3>
-        <app-habilidades class="animate-container "></app-habilidades>
-        <app-experiencia></app-experiencia>
-        <app-contacto></app-contacto>
+    <div class="main-content ">
+        <div class="spaced-centered presentation">
+            <h1 class="title ">FEDERICO <br> BARZOLA</h1>
+            <h3 class="subtitle ">Desarrollador web <br> Front-end</h3>
+        </div>
+        <div class="right-aligned">        
+            <app-habilidades class=""></app-habilidades>
+        </div>
+        <div class="left-aligned">        
+            <app-experiencia class=""></app-experiencia>
+        </div>
+        <div class="spaced-centered">        
+            <app-contacto class=""></app-contacto>
+        </div>
         <!-- mas componentes -->
     </div>
 </div>
