--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -1,7 +1,7 @@
 /* Contenedor principal */
 .experiencia-container {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 1rem;
     padding: 20px;
     text-align: center;
   }
@@ -13,6 +13,8 @@
     margin-bottom: 20px;
     font-family: Arial, sans-serif;
     text-transform: uppercase;
+    display: flex; /* Activa flexbox solo para este contenedor */
+    justify-content: flex-start; /* Alinea los elementos al inicio */
   }
   
   /* Descripción */
