`Added animations and scroll animation directive to app component`

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <div class="background">
-    <div class="main-content ">
-        <div class="spaced-centered presentation">
-            <h1 class="title ">FEDERICO <br> BARZOLA</h1>
-            <h3 class="subtitle ">Desarrollador web <br> Front-end</h3>
-        </div>
-        <div class="right-aligned">        
-            <app-habilidades class=""></app-habilidades>
-        </div>
-        <div class="left-aligned">        
-            <app-experiencia class=""></app-experiencia>
-        </div>
-        <div class="spaced-centered">        
-            <app-contacto class=""></app-contacto>
-        </div>
-        <!-- mas componentes -->
+    <div class="main-content">
+      <div class="spaced-centered presentation" appScrollAnimation>
+        <h1 class="title">FEDERICO <br> BARZOLA</h1>
+        <h3 class="subtitle">Desarrollador web <br> Front-end</h3>
+      </div>
+      <div class="right-aligned" appScrollAnimation>
+        <app-habilidades class=""></app-habilidades>
+      </div>
+      <div class="left-aligned" appScrollAnimation>
+        <app-experiencia class=""></app-experiencia>
+      </div>
+      <div class="spaced-centered" appScrollAnimation>
+        <app-contacto class=""></app-contacto>
+      </div>
     </div>
-</div>
+  </div>
+  
