`Refactor habilidades component: update HTML, CSS and TS files with new layout and functionality`

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,4 +1,4 @@
 <div class="experiencia-container">
     <h2>Trabajé en...</h2>
-    <p>En búsqueda de mi primera oportunidad profesional.</p>
+    <p>Buscando mi primera oportunidad profesional.</p>
 </div>
