--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -30,22 +30,22 @@
 
 /* Estilo de los ítems como botones */
 .habilidades-container li {
-  padding: 15px 20px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #fff;
-  background-color: #007bff;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  transition: transform 0.3s ease;
 }
 
 /* Hover de los botones */
 .habilidades-container li:hover {
-  background-color: #0056b3;
-  transform: translateY(-5px);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+}
+
+.habilidades-container li img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
 }
 
 /* Responsividad */
