--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,11 +1,10 @@
-    <div class="habilidades-container">
-        <!-- Tu contenido va aquí -->
-        <h2>Domino...</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Angular</li>
-            <li>typescript</li>
-        </ul>
-    </div>
+<div class="habilidades-container">
+    <h2>Domino...</h2>
+    <ul>
+      <li *ngFor="let habilidad of habilidades">
+        <img [src]="habilidad.icono" [alt]="habilidad.nombre" />
+        <span>{{ habilidad.nombre }}</span>
+      </li>
+    </ul>
+  </div>
+  
