--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,10 +1,10 @@
 <div class="contacto-container">
     <h2>ESCRÍBEME...</h2>
     <div class="redes-sociales">
-        <a href="https://github.com/tu-usuario" target="_blank" rel="noopener" class="icon github">
+        <a href="https://github.com/pincha1212" target="_blank" rel="noopener" class="icon github">
             <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
         </a>
-        <a href="https://www.linkedin.com/in/tu-perfil/" target="_blank" rel="noopener" class="icon linkedin">
+        <a href="https://www.linkedin.com/in/federico-barzola-7138b3216/" target="_blank" rel="noopener" class="icon linkedin">
             <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
         </a>
     </div>
