--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,7 +62,7 @@
 
 .left-aligned, .right-aligned, .spaced-centered {
   height: 100vh;          
-  width: 100vw;         
+  width: 100%;         
 }
 
 /* Animación de entrada (cuando el elemento entra en el viewport) */
