--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -104,3 +104,21 @@
 .presentation, .right-aligned, .left-aligned, .spaced-centered {
   transition: opacity 0.7s ease, transform 0.7s ease;
 }
+
+
+/* Media Query para dispositivos móviles */
+@media (max-width: 768px) {
+  .title {
+    font-size: 2.5rem;
+  }
+  .subtitle {
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+  .presentation, .left-aligned, .right-aligned, .spaced-centered {
+    flex-direction: column;
+  }
+  .left-aligned, .right-aligned {
+    justify-content: center;
+  }
+}
