--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,38 @@
 <div class="background">
-    <div class="main-content">
-      <div class="spaced-centered presentation" appScrollAnimation>
-        <h1 class="title">FEDERICO <br> BARZOLA</h1>
-        <h3 class="subtitle">Desarrollador web <br> Front-end</h3>
+  <div class="main-content">
+    <!-- Hero Section -->
+    <div class="spaced-centered presentation" appScrollAnimation>
+      <h1 class="title">
+        <div class="name"><span class="glitch-letter">F</span>EDERICO</div>
+        <div>BARZOLA</div>
+      </h1>
+      <h3 class="subtitle">Desarrollador web <br> Front-end</h3>
+    </div>
+    <div class="right-aligned" appScrollAnimation>
+      <app-habilidades></app-habilidades>
+    </div>
+    <div class="left-aligned" appScrollAnimation>
+      <app-experiencia></app-experiencia>
+    </div>
+    <div class="spaced-centered contact-container" appScrollAnimation>
+      <app-contacto class="contact-wrapper"></app-contacto>
+    </div>
+
+    <div class="scroll-indicator">
+      <div class="arrows up-arrows" [class.hidden]="!showUpArrows">
+        <i class="fas fa-chevron-up arrow-up-1"></i>
+        <i class="fas fa-chevron-up arrow-up-2"></i>
+        <i class="fas fa-chevron-up arrow-up-3"></i>
       </div>
-      <div class="right-aligned" appScrollAnimation>
-        <app-habilidades class=""></app-habilidades>
-      </div>
-      <div class="left-aligned" appScrollAnimation>
-        <app-experiencia class=""></app-experiencia>
-      </div>
-      <div class="spaced-centered" appScrollAnimation>
-        <app-contacto class=""></app-contacto>
+      <i class="fas fa-mouse" [class.mouse-top]="mouseState === 'top'"
+                         [class.mouse-middle]="mouseState === 'middle'"
+                         [class.mouse-bottom]="mouseState === 'bottom'"></i>
+      <div class="arrows down-arrows" [class.hidden]="!showDownArrows">
+        <i class="fas fa-chevron-down arrow-1"></i>
+        <i class="fas fa-chevron-down arrow-2"></i>
+        <i class="fas fa-chevron-down arrow-3"></i>
       </div>
     </div>
   </div>
+</div>
   
